# cmake_template

./: .gitignore  CMakeLists.txt  LTexture.cpp  LTexture.h  install_helpers.cmake  main.cpp  sdl_functions.h
geometry/: CMakeLists.txt  geometry.cpp  geometry.h
